Fixed sequence UI layout bug

--- a/www/css/style-brutalist.windows.css
+++ b/www/css/style-brutalist.windows.css
@@ -2810,6 +2810,10 @@ a#inbox-indicator.new-messages:hover::before {
 /* POST NAVIGATION */
 /*******************/
 
+.post-nav-links {
+	padding: 0 var(--GW-current-page-content-right-side-padding) 0 var(--GW-current-page-content-left-side-padding);
+}
+
 .post-nav-item {
 	display: grid;
 	grid-template: 100% / 32% 36% 32%;
@@ -2846,6 +2850,7 @@ a#inbox-indicator.new-messages:hover::before {
 .post-nav.prev {
 	grid-area: prev;
 	align-items: flex-start;
+	padding-left: 1px;
 }
 .post-nav.prev .post-nav-title::before {
 	content: "\F0D9\2005";
@@ -2854,6 +2859,7 @@ a#inbox-indicator.new-messages:hover::before {
 	grid-area: next;
 	text-align: right;
 	align-items: flex-end;
+	padding-right: 1px;
 }
 .post-nav.prev .post-nav-label,
 .post-nav.next .post-nav-label {
@@ -2877,6 +2883,9 @@ a#inbox-indicator.new-messages:hover::before {
 		grid-template-areas:
 			"prev next"
 			"seq seq";
+	}
+	.post-nav.next {
+		padding-right: 2px;
 	}
 	.post-nav.prev .post-nav-title,
 	.post-nav.next .post-nav-title {
